Release history for Task.Joose.Stable

{{$NEXT}}

3.14.1    2010-11-01 12:29

        - do not mess with the package version 

3.14.0    2010-11-01 10:50
        
        - "stable" version is now 3.14

3.6.12    2010-10-27 21:12

        - testing infrastructure release, no functional changes
        
3.6.0     2010-10-27 17:45

        - re-release only for `npm`

3.05      2010-07-05 15:03

        - upgraded Joose to 3.01