@@ -1,9 +1,12 @@
-Joose = function () { throw "Modules may not be instantiated." }
+Joose = {}
 
 Joose.top           = this
+Joose.stub          = function () {
+    return function () { throw new Error("Modules can not be instantiated") }
+}
 
 
-Joose.VERSION       = ({ /*VERSION*/VERSION : 3.014 }).VERSION
+Joose.VERSION       = ({ /*PKGVERSION*/VERSION : 3.016 }).VERSION
 Joose.AUTHORITY     = 'jsan:NPLATONOV'
 
 
@@ -175,16 +178,14 @@ Joose.I = {
 
 Joose.is_IE         = '\v' == 'v'
 Joose.is_NodeJS     = Boolean(typeof process != 'undefined' && process.pid);
-Joose.Proto = function () { throw "Modules may not be instantiated." }
+Joose.Proto = Joose.stub()
 
-Joose.Proto.Empty = function () { throw "Joose.Proto.Empty can't be instantiated" }
+Joose.Proto.Empty = Joose.stub()
     
 Joose.Proto.Empty.meta = {};
 ;(function () {
 
-    Joose.Proto.Object = function () {
-        throw "Joose.Proto.Object can't be instantiated"
-    }
+    Joose.Proto.Object = Joose.stub()
     
     
     var SUPER = function () {
@@ -373,7 +374,8 @@ Joose.Proto.Empty.meta = {};
                 var extend = Joose.O.copy(superProto)
                 
                 extend.isa = Joose.Proto.Empty
-                
+                // clear potential value in the `extend.constructor` to prevent it from being modified
+                delete extend.constructor
                 
                 var meta = new this.defaultSuperClass.meta.constructor(null, extend)
                 
@@ -503,7 +505,7 @@ Joose.Proto.Empty.meta = {};
         return new f() instanceof someClass
     })
 })();
-Joose.Managed = function () { throw "Modules may not be instantiated." }
+Joose.Managed = Joose.stub()
 
 Joose.Managed.Property = new Joose.Proto.Class('Joose.Managed.Property', {
     
@@ -578,7 +580,7 @@ Joose.Managed.Property.ConflictMarker = new Joose.Proto.Class('Joose.Managed.Pro
     isa : Joose.Managed.Property,
 
     apply : function (target) {
-        throw "Attempt to apply ConflictMarker [" + this.name + "] to [" + target + "]"
+        throw new Error("Attempt to apply ConflictMarker [" + this.name + "] to [" + target + "]")
     }
     
 }).c;
@@ -588,7 +590,8 @@ Joose.Managed.Property.Requirement = new Joose.Proto.Class('Joose.Managed.Proper
 
     
     apply : function (target) {
-        if (!target.meta.hasMethod(this.name)) throw "Requirement [" + this.name + "], defined in [" + this.definedIn.definedIn.name + "] is not satisfied for class [" + target + "]"
+        if (!target.meta.hasMethod(this.name)) 
+            throw new Error("Requirement [" + this.name + "], defined in [" + this.definedIn.definedIn.name + "] is not satisfied for class [" + target + "]")
     },
     
     
@@ -644,6 +647,8 @@ Joose.Managed.Property.Attribute = new Joose.Proto.Class('Joose.Managed.Property
     
     setRawValueTo : function (instance, value) {
         instance[ this.slot ] = value
+        
+        return this
     }
     
 }).c;
@@ -681,8 +686,10 @@ Joose.Managed.Property.MethodModifier = new Joose.Proto.Class('Joose.Managed.Pro
             target          : target
         })
         
-        if (isOwn) methodWrapper._original = original
-        methodWrapper._contain = this.value
+        if (isOwn) methodWrapper.__ORIGINAL__ = original
+        
+        methodWrapper.__CONTAIN__   = this.value
+        methodWrapper.__METHOD__    = this
         
         targetProto[name] = methodWrapper
     },
@@ -691,14 +698,14 @@ Joose.Managed.Property.MethodModifier = new Joose.Proto.Class('Joose.Managed.Pro
     isAppliedTo : function (target) {
         var targetCont = target.prototype[this.name]
         
-        return targetCont && targetCont._contain == this.value
+        return targetCont && targetCont.__CONTAIN__ == this.value
     },
     
     
     unapply : function (from) {
         var name = this.name
         var fromProto = from.prototype
-        var original = fromProto[name]._original
+        var original = fromProto[name].__ORIGINAL__
         
         if (!this.isAppliedTo(from)) throw "Unapply of method [" + name + "] from class [" + from + "] failed"
         
@@ -851,9 +858,9 @@ Joose.Managed.Property.MethodModifier.Augment = new Joose.Proto.Class('Joose.Man
             var self = AUGMENT
             
             do {
-                callstack.push(self.IS_AUGMENT ? self._contain : self)
+                callstack.push(self.IS_AUGMENT ? self.__CONTAIN__ : self)
                 
-                self = self.IS_AUGMENT && (self._original || self.SUPER[self.methodName])
+                self = self.IS_AUGMENT && (self.__ORIGINAL__ || self.SUPER[self.methodName])
             } while (self)
             
             
@@ -1307,21 +1314,25 @@ Joose.Managed.StemElement.MethodModifiers = new Joose.Proto.Class('Joose.Managed
         
         props.definedIn         = this
         props.name              = name
-        var modifier            = new metaClass(props)
         
-        if (!this.properties[name]) this.properties[name] = []
-        this.properties[name].push(modifier)
+        var modifier            = new metaClass(props)
+        var properties          = this.properties
+        
+        if (!properties[name]) properties[ name ] = []
+        
+        properties[name].push(modifier)
         
         return modifier
     },
     
 
     addPropertyObject : function (object) {
-        var name = object.name
+        var name            = object.name
+        var properties      = this.properties
         
-        if (!this.properties[name]) this.properties[name] = []
+        if (!properties[name]) properties[name] = []
         
-        this.properties[name].push(object)
+        properties[name].push(object)
         
         return object
     },
@@ -1331,10 +1342,11 @@ Joose.Managed.StemElement.MethodModifiers = new Joose.Proto.Class('Joose.Managed
     removeProperty : function (name) {
         if (!this.haveProperty(name)) return undefined
         
-        var modifier = this.properties[name].pop()
+        var properties      = this.properties
+        var modifier        = properties[ name ].pop()
         
         //if all modifiers were removed - clearing the properties
-        if (!this.properties[name].length) Joose.Managed.StemElement.MethodModifiers.superClass.removeProperty.call(this, name)
+        if (!properties[name].length) Joose.Managed.StemElement.MethodModifiers.superClass.removeProperty.call(this, name)
         
         return modifier
     },
@@ -1360,7 +1372,7 @@ Joose.Managed.StemElement.MethodModifiers = new Joose.Proto.Class('Joose.Managed
                 if (!Joose.A.exists(targetModifiersArr, modifier)) targetModifiersArr.push(modifier)
             })
             
-        }, this)
+        })
     },
     
     
@@ -1372,9 +1384,13 @@ Joose.Managed.StemElement.MethodModifiers = new Joose.Proto.Class('Joose.Managed
     deCompose : function () {
         this.each(function (modifiersArr, name) {
             var i = 0
-            while (i < modifiersArr.length) if (modifiersArr[i].definedIn != this) modifiersArr.splice(i, 1); else i++
             
-        }, this)
+            while (i < modifiersArr.length) 
+                if (modifiersArr[i].definedIn != this) 
+                    modifiersArr.splice(i, 1)
+                else 
+                    i++
+        })
     },
     
     
@@ -1605,7 +1621,7 @@ Joose.Managed.Builder = new Joose.Proto.Class('Joose.Managed.Builder', {
         Joose.O.eachOwn(props, function (value, name) {
             var handler = this[name]
             
-            if (!handler) throw "Unknow builder [" + name + "] was used during extending of [" + targetMeta.c + "]"
+            if (!handler) throw new Error("Unknown builder [" + name + "] was used during extending of [" + targetMeta.c + "]")
             
             handler.call(this, targetMeta, value)
         }, this)
@@ -1962,6 +1978,11 @@ Joose.Managed.Class = new Joose.Proto.Class('Joose.Managed.Class', {
     },
     
     
+    hasMethodModifiersFor : function (name) {
+        return this.stem.properties.methodsModifiers.haveProperty(name)
+    },
+    
+    
     hasOwnMethod: function (name) {
         return this.stem.properties.methods.haveOwnProperty(name)
     },
@@ -2093,6 +2114,14 @@ Joose.Managed.Class = new Joose.Proto.Class('Joose.Managed.Class', {
     
     
     afterMutate : function () {
+    },
+    
+    
+    getCurrentMethod : function () {
+        for (var wrapper = arguments.callee.caller, count = 0; wrapper && count < 5; wrapper = wrapper.caller, count++)
+            if (wrapper.__METHOD__) return wrapper.__METHOD__
+        
+        return null
     }
     
     
@@ -2199,7 +2228,10 @@ Joose.Managed.Attribute = new Joose.Managed.Class('Joose.Managed.Attribute', {
         hasGetter       : false,
         hasSetter       : false,
         
-        required        : false
+        required        : false,
+        
+        canInlineSetRaw : true,
+        canInlineGetRaw : true
     },
     
     
@@ -2294,31 +2326,43 @@ Joose.Managed.Attribute = new Joose.Managed.Class('Joose.Managed.Attribute', {
         
         
         getSetter : function () {
-            var slot = this.slot
+            var me      = this
+            var slot    = me.slot
             
-            return function (value) {
-                this[ slot ] = value
-                
-                return this
-            }
+            if (me.canInlineSetRaw)
+                return function (value) {
+                    this[ slot ] = value
+                    
+                    return this
+                }
+            else
+                return function () {
+                    return me.setRawValueTo.apply(this, arguments)
+                }
         },
         
         
         getGetter : function () {
-            var slot = this.slot
+            var me      = this
+            var slot    = me.slot
             
-            return function () {
-                return this[ slot ]
-            }
+            if (me.canInlineGetRaw)
+                return function (value) {
+                    return this[ slot ]
+                }
+            else
+                return function () {
+                    return me.getRawValueFrom.apply(this, arguments)
+                }
         },
         
         
         getValueFrom : function (instance) {
             var getterName      = this.getterName
             
-            if (this.readable && instance.meta.hasMethod(getterName)) return instance[getterName]()
+            if (this.readable && instance.meta.hasMethod(getterName)) return instance[ getterName ]()
             
-            return instance[ this.slot ]
+            return this.getRawValueFrom(instance)
         },
         
         
@@ -2326,9 +2370,9 @@ Joose.Managed.Attribute = new Joose.Managed.Class('Joose.Managed.Attribute', {
             var setterName      = this.setterName
             
             if (this.writeable && instance.meta.hasMethod(setterName)) 
-                instance[setterName](value)
+                instance[ setterName ](value)
             else
-                instance[ this.slot ] = value
+                this.setRawValueTo(instance, value)
         },
         
         
@@ -2354,9 +2398,9 @@ Joose.Managed.Attribute = new Joose.Managed.Class('Joose.Managed.Attribute', {
                 } 
             
             if (isSet)
-                this.setValueTo(instance, value)
+                this.setRawValueTo(instance, value)
             else 
-                if (this.required) throw "Required attribute [" + name + "] is missed during initialization of " + instance
+                if (this.required) throw new Error("Required attribute [" + name + "] is missed during initialization of " + instance)
         }
     }
 
@@ -2575,7 +2619,7 @@ Joose.Managed.My = new Joose.Managed.Role('Joose.Managed.My', {
     }
     
 }).c;
-Joose.Namespace = function () { throw "Modules may not be instantiated." }
+Joose.Namespace = Joose.stub()
 
 Joose.Namespace.Able = new Joose.Managed.Role('Joose.Namespace.Able', {
 
@@ -2623,7 +2667,7 @@ Joose.Managed.Bootstrap = new Joose.Managed.Role('Joose.Managed.Bootstrap', {
     
 }).c
 ;
-Joose.Meta = function () { throw "Modules may not be instantiated." }
+Joose.Meta = Joose.stub()
 
 
 Joose.Meta.Object = new Joose.Proto.Class('Joose.Meta.Object', {
@@ -2667,7 +2711,7 @@ Joose.Namespace.Keeper = new Joose.Meta.Class('Joose.Namespace.Keeper', {
                 //constructors should assume that meta is attached to 'arguments.callee' (not to 'this') 
                 var thisMeta = arguments.callee.meta
                 
-                if (thisMeta instanceof Joose.Namespace.Keeper) throw "Module [" + thisMeta.c + "] may not be instantiated."
+                if (thisMeta instanceof Joose.Namespace.Keeper) throw new Error("Module [" + thisMeta.c + "] may not be instantiated. Forgot to 'use' the class with the same name?")
                 
                 var externalConstructor = thisMeta.externalConstructor
                 
