@@ -2,6 +2,8 @@ Release history for Task.Joose.Stable
 
 {{$NEXT}}
 
+        - "stable" version is now 3.16
+
 3.14.1    2010-11-01 12:29
 
         - do not mess with the package version 
